# esp32-s3-touch-lcd-1-28

./: Cargo.toml  README.md  build.rs  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: rust_ci.yml
lvgl-configs/: lv_conf.h  lv_drv_conf.h
src/: gyroscope_task.rs  main.rs  screen_draw.rs  screen_task.rs  touch_task.rs
