[package]
name = "esp32-s3-touch-lcd-1-28"
version = "0.1.0"
authors = ["Walter Bonetti <walter.bonetti@epitech.eu>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
embedded-graphics = "0.8.1"
anyhow = "1.0.82"
esp-idf-hal = { version = "0.44.1" }

# Drivers
gc9a01-rs = { version = "0.3.1" }

# Both qmi8658 and cst816s-rs are work-in-progress
qmi8658 = { git = "https://github.com/IniterWorker/qmi8658", rev = "a5d47c98bc84213baba3edea1199814e2c1cbec6", features = [
    "loglib",
] }
cst816s-rs = { git = "https://github.com/IniterWorker/cst816s", rev = "966a0761f992c63ea1a953ba3d4a3fab8de15db0", features = [
    "loglib",
    "std",
] }

# gc9a01-rs = { path = "../gc9a01" }
# qmi8658 = { path = "../qmi8658", features = ["loglib"] }
# cst816s-rs = { path = "../cst816s", features = ["loglib", "std"] }


# Helpers

# Fork support embedded-hal 1.0.0
shared-bus = { git = "https://github.com/Sycrosity/shared-bus.git", version = "0.4.0", features = [
    "std",
] }

# LVGL
cstr_core = "0.2.1"
lvgl = { version = "0.6.2", default-features = false, features = [
    "embedded_graphics",
    "unsafe_no_autoinit",
] }
lvgl-sys = { version = "0.6.2" }

[[bin]]
name = "esp32-s3-touch-lcd-1-28"
harness = false                  # do not use the built in cargo test harneess -> resolve rust-analyzer errors

[build-dependencies]
embuild = "0.32.0"
build-data = "0"
anyhow = "1"

[dev-dependencies.cargo-husky]
version = "1"
features = ["user-hooks"]

# Fork support esp32 lvgl
[patch.crates-io]
lvgl = { git = "https://github.com/enelson1001/lv_binding_rust" }
lvgl-sys = { git = "https://github.com/enelson1001/lv_binding_rust" }
